# backend

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  README.rst  pyproject.toml
.github/workflows/: pre-commit.yml
cmake/: TritonBackendConfig.cmake.in  define.cuda_architectures.cmake
docs/: backend_platform_support_matrix.md  python_based_backends.md
examples/: README.md
examples/backends/bls/: CMakeLists.txt  README.md
examples/backends/bls/cmake/: TritonBLSBackendConfig.cmake.in
examples/backends/bls/src/: backend.cc  bls.cc  bls.h  bls_utils.cc  bls_utils.h  libtriton_bls.ldscript
examples/backends/minimal/: CMakeLists.txt
examples/backends/minimal/src/: minimal.cc
examples/backends/recommended/: CMakeLists.txt
examples/backends/recommended/src/: recommended.cc
examples/batch_strategies/single_batching/: CMakeLists.txt
examples/batch_strategies/single_batching/src/: single_batching.cc
examples/batch_strategies/volume_batching/: CMakeLists.txt
examples/batch_strategies/volume_batching/cmake/: triton-volume-batching.cmake.in
examples/batch_strategies/volume_batching/src/: volume_batching.cc
examples/batching_strategies/single_batching/: CMakeLists.txt
examples/batching_strategies/single_batching/cmake/: triton-single-batching.cmake.in
examples/batching_strategies/single_batching/src/: libtriton_singlebatching.ldscript  single_batching.cc
examples/batching_strategies/volume_batching/: CMakeLists.txt
examples/batching_strategies/volume_batching/cmake/: triton-volume-batching.cmake.in
examples/batching_strategies/volume_batching/src/: libtriton_volumebatching.ldscript  volume_batching.cc
examples/clients/: bls_client  minimal_client  recommended_client
examples/model_repos/bls_models/addsub_onnx/: config.pbtxt
examples/model_repos/bls_models/addsub_onnx/1/: model.onnx
examples/model_repos/bls_models/addsub_python/: config.pbtxt
examples/model_repos/bls_models/addsub_python/1/: model.py
examples/model_repos/bls_models/addsub_tf/: config.pbtxt
examples/model_repos/bls_models/addsub_tf/1/model.savedmodel/: saved_model.pb
examples/model_repos/bls_models/bls_fp32/: config.pbtxt
examples/model_repos/minimal_models/batching/: config.pbtxt
examples/model_repos/minimal_models/nonbatching/: config.pbtxt
examples/model_repos/recommended_models/batching/: config.pbtxt
include/: backend_common.h
include/triton/backend/: backend_common.h  backend_input_collector.h  backend_memory.h  backend_model.h  backend_model_instance.h  backend_output_responder.h  device_memory_tracker.h
src/: backend_common.cc  backend_input_collector.cc  backend_memory.cc  backend_model.cc  backend_model_instance.cc  backend_output_responder.cc  device_memory_tracker.cc  kernel.cu
